# elastic-ermine

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: assets.rs  dev_tools.rs  es.rs  lib.rs  main.rs  search.rs  settings.rs  sidebar.rs  view.rs  widget.rs
src/es/: types.rs
src/widget/: circle.rs
