[package]
name = "elastic_ermine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "list_indicies"
path = "src/bin/list_indicies.rs"

[[bin]]
name = "get_documents"
path = "src/bin/get_documents.rs"

[dependencies]
iced = { version = "0.13.1", features = ["svg"] }
reqwest = { version = "0.12.26", features = ["rustls-tls", "json"] }
tokio = { version = "1.48.0" }
serde_json = "1.0.145"
aws-config = "1.8.12"
aws-sigv4 = "1.3.7"
aws-credential-types = "1.2.11"
http = "1.4.0"
