[package]
name = "elastic_ermine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "list_indicies"
path = "src/bin/list_indicies.rs"

[[bin]]
name = "get_documents"
path = "src/bin/get_documents.rs"

[[bin]]
name = "search"
path = "src/bin/search.rs"

[dependencies]
iced = { version = "0.14.0", features = ["advanced", "svg", "tokio", "image"] }
reqwest = { version = "0.12.26", features = ["rustls-tls", "json"] }
tokio = { version = "1.48.0", features = ["fs"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"]}
aws-config = "1.8.12"
aws-sigv4 = "1.3.7"
aws-credential-types = "1.2.11"
http = "1.4.0"
rfd = "0.16.0"
image = "^0.25"
iced_selection = "0.5.0"
